--- a/index.html
+++ b/index.html
@@ -1,200 +1,167 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DVK… This Is Getting Out Of Control ❤️</title>
+<title>DVK 💕</title>
 
 <style>
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background: black;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: white;
-    transition: background 0.3s;
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(135deg, #ff9ecf, #ffc3e6, #ffe6f7);
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
 }
 
-.container {
-    position: relative;
-    width: 100%;
-    height: 100%;
+/* Floating hearts */
+.heart {
+  position: fixed;
+  bottom: -20px;
+  font-size: 20px;
+  animation: floatUp 6s linear infinite;
+  opacity: 0.7;
 }
 
-h1 {
-    margin-top: 60px;
+@keyframes floatUp {
+  0% { transform: translateY(0); opacity: 0.8; }
+  100% { transform: translateY(-110vh); opacity: 0; }
 }
+
+.card {
+  background: white;
+  padding: 30px;
+  border-radius: 25px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  width: 90%;
+  max-width: 400px;
+  position: relative;
+  z-index: 10;
+}
+
+h1 { color: #ff4da6; }
+p { min-height: 40px; }
 
 button {
-    position: absolute;
-    padding: 12px 20px;
-    border-radius: 40px;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-    transition: transform 0.2s;
+  padding: 12px 20px;
+  font-size: 16px;
+  border-radius: 25px;
+  border: none;
+  cursor: pointer;
+  margin: 8px;
+  transition: 0.3s ease;
 }
 
-.yes {
-    background: lime;
-    color: black;
-    font-weight: bold;
+.yesBtn {
+  background: #ff4da6;
+  color: white;
+  position: absolute;
 }
 
-.no {
-    background: crimson;
-    color: white;
-}
-
-.glitch {
-    animation: shake 0.2s infinite;
-}
-
-@keyframes shake {
-    0% { transform: translate(3px, 3px); }
-    50% { transform: translate(-3px, -3px); }
-    100% { transform: translate(3px, -3px); }
-}
-
-.confetti {
-    position: fixed;
-    width: 8px;
-    height: 8px;
-    top: 0;
-    animation: fall linear forwards;
-}
-
-@keyframes fall {
-    to {
-        transform: translateY(100vh) rotate(720deg);
-        opacity: 0;
-    }
-}
-
-#message {
-    position: absolute;
-    top: 120px;
-    width: 100%;
-    text-align: center;
-    font-style: italic;
+#noBtn {
+  background: #444;
+  color: white;
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-    <h1>DVK ❤️ Will you be my Valentine?</h1>
-    <div id="message"></div>
-    <button class="yes" id="yesBtn">YES 😌</button>
-    <button class="no" id="noBtn">NO 😈</button>
+<div class="card">
+  <h1>DVK 💕</h1>
+  <h2>Will you be my Valentine? 💘</h2>
+  <p id="message">Choose wisely… destiny is watching 😌</p>
+
+  <div id="buttonArea">
+    <button class="yesBtn">Yes 💖</button>
+    <button id="noBtn">No 😈</button>
+  </div>
 </div>
 
 <script>
-const container = document.querySelector(".container");
-const yesBtn = document.getElementById("yesBtn");
-const noBtn = document.getElementById("noBtn");
 const message = document.getElementById("message");
+const noBtn = document.getElementById("noBtn");
+const buttonArea = document.getElementById("buttonArea");
 
-let chaos = 0;
+let scale = 1;
+let noCount = 0;
 
-// Position initial buttons
-function placeRandom(btn) {
-    btn.style.left = Math.random() * (window.innerWidth - 120) + "px";
-    btn.style.top = Math.random() * (window.innerHeight - 60) + "px";
+const funnyMessages = [
+  "Are you sure DVK? 🥺",
+  "My dramatic heart just cracked 💔",
+  "The universe gasped 🌌",
+  "Even my WiFi is disappointed 📶",
+  "This is emotional damage 😭",
+  "Why are you like this 😩",
+  "Plot twist loading… ⏳"
+];
+
+/* Floating Hearts Generator */
+function createHeart() {
+  const heart = document.createElement("div");
+  heart.classList.add("heart");
+  heart.innerHTML = "💖";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.fontSize = (Math.random() * 20 + 15) + "px";
+  heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
+  document.body.appendChild(heart);
+
+  setTimeout(() => heart.remove(), 6000);
+}
+setInterval(createHeart, 500);
+
+/* YES button behavior */
+function attachYesBehavior(btn) {
+  btn.addEventListener("mouseover", () => {
+    if (scale < 3) {
+      btn.style.left = Math.random() * 250 + "px";
+      btn.style.top = Math.random() * 150 + "px";
+    }
+  });
+
+  btn.addEventListener("click", () => {
+    document.querySelector(".card").innerHTML = `
+      <h1>🎉 YAY DVK!!! 🎉</h1>
+      <p>You have unlocked MAXIMUM LOVE MODE 💕</p>
+      <p>Prepare for snacks, chaos, and cuddles 😌💖</p>
+    `;
+  });
 }
 
-placeRandom(yesBtn);
-placeRandom(noBtn);
+/* Attach to initial YES */
+attachYesBehavior(document.querySelector(".yesBtn"));
 
-// YES click wins
-yesBtn.addEventListener("click", victory);
-
-// NO click multiplies
+/* NO button chaos */
 noBtn.addEventListener("click", () => {
-    chaos++;
+  noCount++;
+  scale += 0.3;
 
-    document.body.classList.add("glitch");
-    setTimeout(() => document.body.classList.remove("glitch"), 300);
+  if (noCount <= funnyMessages.length) {
+    message.textContent = funnyMessages[noCount - 1];
+  } else {
+    message.textContent = "Okay this is getting ridiculous now 😭";
+  }
 
-    document.body.style.background =
-        `hsl(${Math.random()*360}, 80%, 10%)`;
+  /* Multiply YES buttons */
+  const newYes = document.createElement("button");
+  newYes.classList.add("yesBtn");
+  newYes.innerText = "Yes 💖";
+  newYes.style.left = Math.random() * 250 + "px";
+  newYes.style.top = Math.random() * 150 + "px";
+  newYes.style.transform = `scale(${scale})`;
 
-    message.innerHTML = getChaosMessage(chaos);
+  attachYesBehavior(newYes);
+  buttonArea.appendChild(newYes);
 
-    multiplyNo();
-    yesBtn.style.transform = `scale(${1 + chaos * 0.15})`;
-
-    if (chaos >= 8) {
-        turnEverythingToYes();
-    }
+  /* Make all YES buttons bigger */
+  document.querySelectorAll(".yesBtn").forEach(btn => {
+    btn.style.transform = `scale(${scale})`;
+  });
 });
-
-function multiplyNo() {
-    const newNo = document.createElement("button");
-    newNo.innerHTML = "NO 😈";
-    newNo.className = "no";
-    placeRandom(newNo);
-    container.appendChild(newNo);
-
-    newNo.addEventListener("click", () => {
-        chaos++;
-        multiplyNo();
-        yesBtn.style.transform = `scale(${1 + chaos * 0.15})`;
-        message.innerHTML = getChaosMessage(chaos);
-
-        if (chaos >= 8) {
-            turnEverythingToYes();
-        }
-    });
-}
-
-function getChaosMessage(level) {
-    const lines = [
-        "DVK… bold move.",
-        "Oh we multiplying now?",
-        "This is chaos.",
-        "Why are there so many NOs?",
-        "You did this.",
-        "Reality is unstable.",
-        "This is spiraling.",
-        "Okay that’s enough."
-    ];
-    return lines[Math.min(level-1, lines.length-1)];
-}
-
-function turnEverythingToYes() {
-    message.innerHTML = "Nice try DVK 😌";
-    document.querySelectorAll(".no").forEach(btn => {
-        btn.className = "yes";
-        btn.innerHTML = "YES 😌";
-        btn.onclick = victory;
-    });
-}
-
-function victory() {
-    document.body.style.background = "black";
-    container.innerHTML = "<h1>HAHA DVK 😌❤️<br>You were always going to say YES.</h1>";
-    launchConfetti();
-}
-
-function launchConfetti() {
-    for (let i = 0; i < 200; i++) {
-        const confetti = document.createElement("div");
-        confetti.classList.add("confetti");
-        confetti.style.left = Math.random() * 100 + "vw";
-        confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
-        confetti.style.animationDuration = (Math.random() * 3 + 2) + "s";
-        document.body.appendChild(confetti);
-        setTimeout(() => confetti.remove(), 5000);
-    }
-}
 </script>
 
 </body>
